# pika-8-game

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  _ROADMAP.md  config.json
docs/game_mechanics/: fsm.md
docs/lua/: Deque.md  Vector2d.md
scripts/_rungame/: game.lua  game_sfx.lua  game_spr_tutor.lua  main.lua
scripts/_src/ai/: _state.lua  chunker.lua  flow_field_stream.lua  vector_field.lua  vector_field_D.lua
scripts/_src/enemy/: base_mob.lua  enemy.lua  enemy_spawner.lua
scripts/_src/enemy/flying_enemies/: flying_mob.lua
scripts/_src/enemy/flying_enemies/flying_a/: enemy.lua
scripts/_src/enemy/flying_enemies/flying_a/states/: _state.lua  chase.lua  death.lua  idle.lua  patrol.lua  stunned.lua
scripts/_src/enemy/states/: _state.lua  chase.lua  death.lua  idle.lua  patrol.lua  stunned.lua
scripts/_src/player/: player.lua
scripts/custom_libs/: collisions.lua  custom_libs.lua  deque.lua  event_bus.lua  event_emitter.lua  event_proxy.lua  json_reader.lua  logger.lua  oop.lua
scripts/custom_libs/abstract_types/: async_find.lua  deque.lua  prior_deque.lua  vec2.lua
scripts/enemy/: enemy.lua  enemy_spawner.lua
scripts/enemy/states/: chase.lua  idle.lua  state.lua
scripts/libs/: collisions.lua  custom_libs.lua  vec2.lua
